added img & updated css

--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
   <body>
     <h1>Hello Git</h1>
     <form>
-      <input type="email" placeholder="Enter your email..." />
-      <input type="password" placeholder="Enter your  password..." />
-      <input type="submit" value="Login" />
+      <input type="email" placeholder="Enter your email..." id="email" />
+      <input type="password" placeholder="Enter your  password..." id="pswd"/>
+      <button type="submit" class="btn btn-info" id="topSearch">
+          Search
+          </button> 
     </form>
+    <br/>
+    </body>
+    <img src="C:\Users\Robert\Documents\SheCodes\SC+\riverwalk.jpg" alt="" />
     <script src="script.js"></script>
   </body>
 </html>
