--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello Git</h1>
+    <h1>Hello Github</h1>
+    <h2>Hosting can be easy!</h2>
     <form>
       <input type="email" placeholder="Enter your email..." id="email" />
       <input type="password" placeholder="Enter your  password..." id="pswd"/>
@@ -21,4 +22,7 @@
     <img src="C:\Users\Robert\Documents\SheCodes\SC+\riverwalk.jpg" alt="" />
     <script src="script.js"></script>
   </body>
+  <footer>
+    Coded by Renee Pond
+  </footer>
 </html>
