--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </form>
     <br/>
     </body>
-    <img src="C:\Users\Robert\Documents\SheCodes\SC+\riverwalk.jpg" alt="" />
+    <img src="https://image.shutterstock.com/image-photo/night-time-scenic-views-riverwalk-260nw-404693308.jpg" alt="" />
     <script src="script.js"></script>
   </body>
   <footer>
