--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Hello Github</h1>
-    <h2>Hosting can be easy with <a href="https://www.netlify.com/"></a>Netlify!</h2>
+    <h2>Hosting can be easy with <a href="https://www.netlify.com/">Netlify</a>!</h2>
     <form>
       <input type="email" placeholder="Enter your email..." id="email" />
       <input type="password" placeholder="Enter your  password..." id="pswd"/>
