--- a/index.html
+++ b/index.html
@@ -5,26 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello Github</h1>
-    <h2>Hosting can be easy with <a href="https://www.netlify.com/">Netlify</a>
-      !
-    </h2>
-    <form>
-      <input type="email" placeholder="Enter your email..." id="email" />
-      <input type="password" placeholder="Enter your  password..." id="pswd"/>
-      <button type="submit" class="btn btn-info" id="topSearch">
+    <div class="container">
+      <h1>Hello from Github</h1>
+      <h2>
+        Hosting can be easy with <a href="https://www.netlify.com/">Netlify!</a>
+      </h2>
+      <br />
+      <a href="mailto:renpond12@gmail.com" class="btn btn-primary contact-btn"
+        >Contact me</a
+      >
+      <br />
+      <form>
+        <input type="email" placeholder="Enter your email..." id="email" />
+        <input
+          type="password"
+          placeholder="Enter your  password..."
+          id="pswd"
+        />
+        <button type="submit" class="btn btn-info" id="topSearch">
           Search
-          </button> 
-    </form>
-    <br/>
-    </body>
-    <img src="https://image.shutterstock.com/image-photo/night-time-scenic-views-riverwalk-260nw-404693308.jpg" alt="" />
-    <script src="script.js"></script>
+        </button>
+      </form>
+      <br />
+      <img
+        src="https://image.shutterstock.com/image-photo/night-time-scenic-views-riverwalk-260nw-404693308.jpg"
+        alt=""
+      />
+      <script src="script.js"></script>
+    </div>
   </body>
-  <footer>
-    Coded by Renee Pond
-  </footer>
+  <footer>Coded by Renee Pond</footer>
 </html>
